Add SevenZip package, Start adding LZMA to Manifest

--- a/hxe/kernel/src/HXE.csproj
+++ b/hxe/kernel/src/HXE.csproj
@@ -55,6 +55,9 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="SevenZip, Version=19.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\spv3\loader\src\packages\LZMA-SDK.19.0.0\lib\net20\SevenZip.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -145,6 +148,9 @@
     <EmbeddedResource Include="..\..\..\ext\halo-ce-patches\patches.crk">
       <Link>HCE\patches.crk</Link>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
